--- a/Exercises/06 Exercises.ipynb
+++ b/Exercises/06 Exercises.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -38,10 +38,36 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\"\"\"\n",
+    "def area(x0, y0, x1, y1, x2, y2):\n",
+    "    return abs(x0*(y1-y2) + x1*(y2-y0) + x2*(y0-y1))/2\n",
+    "\n",
+    "x0, y0 = 0.0, 0.0\n",
+    "x1, y1 = 0.0, 2.0\n",
+    "x2, y2 = 3.0, 0.0\n",
+    "A = area(x0, y0, x1, y1, x2, y2)\n",
+    "print( round(A - 3.0, 10) == 0.0 )\n",
+    "\"\"\"\n",
+    "\n",
+    "first_vertice = (0.0, 0.0)\n",
+    "second_vertice = (0.0, 2.0)\n",
+    "third_vertice = (3.0, 0.0)\n",
+    "\n",
+    "def better_area(v0, v1, v2):\n",
+    "    return abs(v0[0]*(v1[1]-v2[1]) + v1[0]*(v2[1]-v0[1]) + v2[0]*(v0[1]-v1[1]))/2\n",
+    "A = better_area(first_vertice, second_vertice, third_vertice)\n",
+    "print(A)"
    ]
   },
   {
@@ -73,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -86,10 +112,35 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "first_vertice = (0.0, 0.0)\n",
+    "second_vertice = (0.0, 3.0)\n",
+    "third_vertice = (4.0, 3.0)\n",
+    "fourth_vertice = (4.0, 0.0)\n",
+    "fifth_vertice = (2.0, 0.0) # kinda a dummy vertice here for the testing so I know the area\n",
+    "\n",
+    "my_shape = [first_vertice, second_vertice, third_vertice, fourth_vertice, fifth_vertice]\n",
+    "\n",
+    "def area(shape):\n",
+    "    A = 0\n",
+    "    for i in range(len(shape)-1):\n",
+    "        A += shape[i][0]*shape[i+1][1] - shape[i+1][0]*shape[i][1]\n",
+    "    return abs(A/2)\n",
+    "\n",
+    "area(my_shape)"
    ]
   },
   {
@@ -125,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -138,17 +189,33 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "def sum_vector(x, y):\n",
     "    \"Return sum of two vectors\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    z = []\n",
+    "    for i in range(len(x)):\n",
+    "        z += [x[i] + y[i]]\n",
+    "    return z\n",
+    "\n",
+    "a = [0, 4.3, -5, 7]\n",
+    "b = [-2, 7, -15, 1]\n",
+    "c = sum_vector(a, b)\n",
+    "print( c == [-2, 11.3, -20, 8] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -180,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -194,10 +261,23 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2, 11.3, -20, 8]\n",
+      "[-2, 11.3, -20, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print( [a[i] + b[i] for i in range(len(a))] ) # the first method that came to my mind\n",
+    "\n",
+    "# OR\n",
+    "\n",
+    "print( [x+y for x,y in list(zip(a,b))] )"
    ]
   },
   {
@@ -227,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -240,10 +320,41 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"St Catharine's\": 'CTH', \"Christ's\": 'CHR', 'Churchill': 'CHU', 'Clare': 'CL', 'Clare Hall': 'CLH', 'Corpus Christi': 'CC'} \n",
+      "\n",
+      "Dictionary from college abbrev to name:\n",
+      " {'CTH': \"St Catharine's\", 'CHR': \"Christ's\", 'CHU': 'Churchill', 'CL': 'Clare', 'CLH': 'Clare Hall', 'CC': 'Corpus Christi'}\n",
+      "\n",
+      "Sorted abbreviation list:\n",
+      " ['CC', 'CHR', 'CHU', 'CL', 'CLH', 'CTH']\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "names_to_abbrev = {'St Catharine\\'s': 'CTH',\n",
+    "                   'Christ\\'s': 'CHR', \n",
+    "                   'Churchill': 'CHU', \n",
+    "                   'Clare':'CL', \n",
+    "                   'Clare Hall':'CLH', \n",
+    "                   'Corpus Christi': 'CC'}\n",
+    "print(names_to_abbrev, '\\n') # Testing this list\n",
+    "\n",
+    "\"Inversing the list\"\n",
+    "abbrev_to_names = {}\n",
+    "for name, abbrev in names_to_abbrev.items():\n",
+    "    abbrev_to_names[abbrev] = name\n",
+    "print('Dictionary from college abbrev to name:\\n', abbrev_to_names)\n",
+    "    \n",
+    "\"Sorting the abbreviation list\"\n",
+    "abbrev_list = [abbrev for abbrev in abbrev_to_names]\n",
+    "abbrev_list.sort()\n",
+    "print('\\nSorted abbreviation list:\\n', abbrev_list)"
    ]
   },
   {
@@ -267,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -280,10 +391,45 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The college with the greatest number of students in this list is:  CHU\n",
+      "Oldest College in the list is  CL , with number of students:  808\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "cambridge_colleges = {'St Catharine\\'s': ('CTH', 1473, 768),\n",
+    "                   'Christ\\'s': ('CHR', 1505, 689), \n",
+    "                   'Churchill': ('CHU', 1960, 845), \n",
+    "                   'Clare': ('CL', 1326, 808), \n",
+    "                   'Clare Hall': ('CLH', 1966, 249), \n",
+    "                   'Corpus Christi': ('CL', 1352, 553)}\n",
+    "\n",
+    "\"Find college with the greatest number of students and print its abbreviation\"\n",
+    "greatest_num_students = 0\n",
+    "for n, l in cambridge_colleges.items():\n",
+    "    if l[2] > greatest_num_students:\n",
+    "        greatest_num_students_college_abbrev = l[0]\n",
+    "        greatest_num_students = l[2]\n",
+    "print('The college with the greatest number of students in this list is: ', \n",
+    "      greatest_num_students_college_abbrev)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"Find oldest college and print its number of students and its abbreviation\"\n",
+    "oldest_college_year = 2020\n",
+    "for n, l in cambridge_colleges.items():\n",
+    "    if l[1] < oldest_college_year:\n",
+    "        oldest_college_abbrev = l[0]\n",
+    "        oldest_college_numstudents = l[2]\n",
+    "        oldest_college_year = l[1]\n",
+    "print('Oldest College in the list is ', oldest_college_abbrev, \n",
+    "      ', with number of students: ', oldest_college_numstudents)\n"
    ]
   }
  ],
@@ -303,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
