--- a/06 Data structures.ipynb
+++ b/06 Data structures.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Sarah', 'John', 'Joe', 'Emily'], ['Roger', 'Rachel', 'Amer', 'Caroline', 'Colin']]\n"
+     ]
+    }
+   ],
    "source": [
-    "lab_groups = [lab_group0, lab_group1]"
+    "lab_groups = [lab_group0, lab_group1]\n",
+    "print(lab_groups)"
    ]
   },
   {
@@ -90,15 +99,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lab group members: ['Sarah', 'John', 'Joe', 'Emily', 'Quang']\n",
+      "Size of lab group: 5\n",
+      "Check the Python object type: <class 'list'>\n",
+      "Check the Python object type: <class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "lab_group0 = [\"Sarah\", \"John\", \"Joe\", \"Emily\", \"Quang\"]\n",
     "print(\"Lab group members: {}\".format(lab_group0))\n",
     "print(\"Size of lab group: {}\".format(len(lab_group0)))\n",
     "\n",
-    "print(\"Check the Python object type: {}\".format(type(lab_group0)))"
+    "print(\"Check the Python object type: {}\".format(type(lab_group0)))\n",
+    "print(\"Check the Python object type:\", type(lab_group0))\n",
+    "#Just to check that they are the same thing"
    ]
   },
   {
@@ -112,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Oliver', 'Oliver', 'Oliver', 'Oliver', 'Oliver']\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [\"Oliver\"]*5\n",
     "print(my_list)"
@@ -147,9 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sarah\n",
+      "John\n",
+      "Joe\n",
+      "Emily\n",
+      "Quang\n"
+     ]
+    }
+   ],
    "source": [
     "for member in lab_group0:\n",
     "    print(member)"
@@ -165,9 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Sarah\n",
+      "1 John\n",
+      "2 Joe\n",
+      "3 Emily\n",
+      "4 Quang\n"
+     ]
+    }
+   ],
    "source": [
     "for n, member in enumerate(lab_group0):\n",
     "    print(n, member)"
@@ -191,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1090,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
