--- a/02 Control statements.ipynb
+++ b/02 Control statements.ipynb
@@ -776,7 +776,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
