--- a/03 Types, type conversions and floating point arithmetic.ipynb
+++ b/03 Types, type conversions and floating point arithmetic.ipynb
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -454,6 +454,7 @@
      "output_type": "stream",
      "text": [
       "68719476736\n",
+      "<class 'int'>\n",
       "37\n"
      ]
     }
@@ -461,7 +462,7 @@
    "source": [
     "b = a**12\n",
     "print(b)\n",
-    "type(b)\n",
+    "print(type(b))\n",
     "print(b.bit_length())"
    ]
   },
