--- a/000 Jensen's Condensed Notes.ipynb
+++ b/000 Jensen's Condensed Notes.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Here I will list all the formatting that I may use in the notebook\n",
+    "Here I will list all the markdown formatting that I may use in the notebook\n",
     "\n",
     "<br>\n",
     "\n",
@@ -58,11 +58,11 @@
     "# Course Content\n",
     "\n",
     "\n",
-    "0. [Structure](http://localhost:8889/notebooks/Documents/GitHub/PartIA-Computing-Michaelmas/00%20Part%20IA%20Michaelmas%20Term%20computing.ipynb)\n",
-    "1. [Variables, assignment and operator precedence](http://localhost:8889/notebooks/Documents/GitHub/PartIA-Computing-Michaelmas/01%20Variables%2C%20assignment%20and%20operator%20precedence.ipynb)\n",
-    "1. [Control statements](http://localhost:8889/notebooks/Documents/GitHub/PartIA-Computing-Michaelmas/03%20Types,%20type%20conversions%20and%20floating%20point%20arithmetic.ipynb)\n",
+    "0. [Structure](00%20Part%20IA%20Michaelmas%20Term%20computing.ipynb)\n",
+    "1. [Variables, assignment and operator precedence](01%20Variables,%20assignment%20and%20operator%20precedence.ipynb)\n",
+    "1. [Control statements](02%20Control%20statements.ipynb)\n",
     "1. [Types, type conversions and floating point arithmetic](03%20Types,%20type%20conversions%20and%20floating%20point%20arithmetic.ipynb)\n",
-    "1. [Functions](http://localhost:8889/notebooks/Documents/GitHub/PartIA-Computing-Michaelmas/04%20Functions.ipynb)\n",
+    "1. [Functions](04%20Functions.ipynb)\n",
     "1. [Library functions](05%20Library%20functions.ipynb)\n",
     "1. [Data structures](06%20Data%20structures.ipynb)\n",
     "1. [Numerical computation](07%20Numerical%20computation.ipynb)\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 40,
    "metadata": {
     "scrolled": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,9 @@
     "print('{0:.30f}'.format(x))\n",
     "for i in range(20):\n",
     "    x = x*11 - 1\n",
-    "    print(x)"
+    "    print(x)\n",
+    "# This is caused by the fact that 0.1 here is represented by a 64 bit binary approximation.\n",
+    "# By default, Python uses 64 bits to store a float, but we can use numpy to create 32 bit floats and more."
    ]
   },
   {
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -829,12 +831,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Failed - [Sorting Example](\"05%20Library%20functions.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 06 Data structures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1098,6 +1107,161 @@
     "}\n",
     "print (my_dict[\"my_key\"][\"key_1\"])  # This will print value_1\n",
     "print (my_dict[\"my_key\"][\"key_2\"])  # This will print value_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 07 Numerical computation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NumPy 1D Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0.]\n",
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      "[0.84314081 0.0397491  0.61188414]\n",
+      "[2 3 4 5 6 7 8 9]\n",
+      "[2 3 4 5 6 7 8 9]\n",
+      "[  0.  20.  40.  60.  80. 100.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(np.zeros(6))\n",
+    "print(np.ones(10))\n",
+    "print(np.random.rand(3))\n",
+    "\n",
+    "print(np.arange(2,10))       # It is Array RANGE hence arange\n",
+    "print(np.array(range(2,10))) # Same thing as above\n",
+    "\n",
+    "\n",
+    "print(np.linspace(0,100,6))  # Used extensively for plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0.]\n",
+      "<class 'numpy.ndarray'>\n",
+      "6\n",
+      "float64\n",
+      "(6,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.zeros(6)\n",
+    "\n",
+    "print(x)\n",
+    "print(type(x))\n",
+    "print(len(x))\n",
+    "print(x.dtype) # Dimensional Type (of the values)\n",
+    "print(x.shape) # Shape - axbxc matrice gives (a,b,c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10.  0.  0.  0.  0.  5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"Indexing - same as python lists\"\n",
+    "x[0] = 10\n",
+    "x[5] = 5\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4.  8.  9. 11. -2.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"NumPy array from python list\"\n",
+    "x = [4.0, 8.0, 9.0, 11.0, -2.0]\n",
+    "y = np.array(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arithmetic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 4]\n",
+      "[0.         1.57079633 3.14159265] \n",
+      "\n",
+      "[1.         3.57079633 7.14159265]\n",
+      "[ 0.          3.14159265 12.56637061]\n",
+      "[2 4 8]\n",
+      "[ 1  4 16] \n",
+      "\n",
+      "[0.0000000e+00 1.0000000e+00 1.2246468e-16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1, 2, 4])\n",
+    "y = np.array([0, np.pi/2, np.pi])\n",
+    "print(x)\n",
+    "print(y, \"\\n\")\n",
+    "\n",
+    "print(x + y)\n",
+    "print(x * y)\n",
+    "print(x * 2)\n",
+    "print(x ** 2, \"\\n\")\n",
+    "\n",
+    "print(np.sin(y)) # Not math.sin though"
    ]
   }
  ],
