--- a/07 Numerical computation.ipynb
+++ b/07 Numerical computation.ipynb
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.41169769 0.54091632 0.08849928 0.65435524 0.69087924 0.75764655]\n"
+      "[0.30058115 0.87552496 0.4236746  0.33095139 0.56881563 0.62629887]\n"
      ]
     }
    ],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -528,6 +528,28 @@
     "y = np.zeros(len(x))\n",
     "for i in range(len(x)):\n",
     "    y[i] = np.sin(x[i])\n",
+    "\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.0000000e+00  1.0000000e+00  1.2246468e-16 -1.0000000e+00]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "y = np.zeros(len(x))\n",
+    "for i in range(len(x)):\n",
+    "    y[i] = math.sin(x[i])\n",
     "\n",
     "print(y)"
    ]
@@ -561,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -587,16 +609,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.3 ms, sys: 1.27 ms, total: 18.6 ms\n",
-      "Wall time: 2.9 ms\n",
-      "1826.3761914508946\n"
+      "Wall time: 3.99 ms\n",
+      "1825.263369146063\n"
      ]
     }
    ],
@@ -619,16 +640,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.69 s, sys: 69.2 ms, total: 2.76 s\n",
-      "Wall time: 2.38 s\n",
-      "1826.3761914508211\n"
+      "Wall time: 2.22 s\n",
+      "1825.263369145993\n"
      ]
     }
    ],
@@ -675,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1043,14 +1063,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.98907875 0.56017466 0.29554504 0.73131551 0.75336633]\n"
+      "[0.62966659 0.70892358 0.32666554 0.7945635  0.91905074]\n"
      ]
     }
    ],
@@ -1068,17 +1088,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Slice using '[:]' [0.98907875 0.56017466 0.29554504 0.73131551 0.75336633]\n",
-      "Slice using '[1:3]': [0.56017466 0.29554504]\n",
-      "Slice using '[2:-1]': [0.29554504 0.73131551]\n",
-      "Slice using '[2:-2]': [0.29554504]\n"
+      "Slice using '[:]' [0.62966659 0.70892358 0.32666554 0.7945635  0.91905074]\n",
+      "Slice using '[1:3]': [0.70892358 0.32666554]\n",
+      "Slice using '[2:-1]': [0.32666554 0.7945635 ]\n",
+      "Slice using '[2:-2]': [0.32666554]\n"
      ]
     }
    ],
@@ -1106,7 +1126,9 @@
    "source": [
     "> Note the use of the index `-1`. The index `-1` corresponds to the last entry in the array, and `-2` the \n",
     "> second last entry, etc. This is convenient if we know how far in from the end of an array a desired entry is.\n",
-    "> By using negative indices we can express this without reference to the length of the array."
+    "> By using negative indices we can express this without reference to the length of the array.\n",
+    "\n",
+    "> *I THINK THIS IS WRONG `-1` should be second to last - from third to last is just '`[2:]`'*"
    ]
   },
   {
@@ -1209,7 +1231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
