--- a/Exercises/07 Exercises.ipynb
+++ b/Exercises/07 Exercises.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "x = np.ones(10)\n",
     "y = np.ones(len(x))\n",
     "for i in range(len(x)):\n",
     "    print(x[i]*y[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"Create 2 very long arrays\"\n",
+    "length = 10000000\n",
+    "x = np.random.rand(length)\n",
+    "y = np.random.rand(length)"
    ]
   },
   {
@@ -54,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -67,10 +96,20 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 36.9 ms\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def built_in_addition(a,b):\n",
+    "    return a + b\n",
+    "%time answer = built_in_addition(x,y)"
    ]
   },
   {
@@ -82,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -95,10 +134,25 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 3.58 s\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def own_implementation(a,b):\n",
+    "    c = np.zeros(len(a))\n",
+    "    for i in range(len(a)):\n",
+    "        c[i] = a[i] + b[i]\n",
+    "    return c\n",
+    "\n",
+    "%time answer = own_implementation(x,y)\n",
+    "        "
    ]
   },
   {
@@ -114,9 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 2.82 s\n",
+      "Wall time: 49.9 ms\n"
+     ]
+    }
+   ],
    "source": [
     "!pip -q install numba \n",
     "import numba\n",
@@ -149,6 +212,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 139 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numba\n",
+    "\n",
+    "@numba.jit\n",
+    "def own_implementation_jit(a,b):\n",
+    "    c = np.zeros(len(a))\n",
+    "    for i in range(len(a)):\n",
+    "        c[i] = a[i] + b[i]\n",
+    "    return c\n",
+    "\n",
+    "%time answer = own_implementation_jit(x,y)\n",
+    "\n",
+    "#it is much faster wow"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -177,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -190,20 +281,41 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13.         40.         58.33333333 70.         96.66666667]\n",
+      "[58.  35.  24.  42.   7.8]\n",
+      "{'min': 7.8, 'max': 58.0, 'mean': 33.36}\n"
+     ]
+    }
+   ],
    "source": [
     "def to_percentage_and_sort(scores):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    scores  = scores * 100 / 60\n",
+    "    scores.sort()\n",
+    "    return scores\n",
     "\n",
     "def statistics(scores, exclude=False):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    if exclude == True:\n",
+    "        scores.sort()\n",
+    "        scores = scores[1:-1]\n",
+    "    print(scores)\n",
+    "    dictionary = {\"min\": scores.min(), \"max\": scores.max(), \"mean\": scores.mean()}\n",
+    "    return dictionary\n",
+    "\n",
+    "scores = np.array([58.0, 35.0, 24.0, 42, 7.8])\n",
+    "print(to_percentage_and_sort(scores))\n",
+    "print(statistics(scores))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -218,7 +330,16 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[58.  35.  24.  42.   7.8]\n",
+      "[24. 35. 42.]\n"
+     ]
+    }
+   ],
    "source": [
     "scores = np.array([58.0, 35.0, 24.0, 42, 7.8])\n",
     "assert np.isclose(to_percentage_and_sort(scores), [ 13.0, 40.0, 58.33333333,  70.0, 96.66666667]).all()\n",
@@ -257,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -271,7 +392,18 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   4.      7.     -2.43   67.1 ]\n",
+      " [  -4.     64.     54.7    -3.33]\n",
+      " [   2.43   23.2     3.64    4.11]\n",
+      " [   1.2     2.5  -113.2   323.22]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[4.0, 7.0, -2.43, 67.1],\n",
     "             [-4.0, 64.0, 54.7, -3.33],\n",
@@ -309,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -322,10 +454,18 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  -2.43   54.7     3.64 -113.2 ]\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(A[:, 2])"
    ]
   },
   {
@@ -337,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -351,10 +491,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4.    7.   -2.43 67.1 ]\n",
+      " [-4.   64.   54.7  -3.33]]\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(A[:2, :])"
    ]
   },
   {
@@ -366,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -379,10 +528,19 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   3.64    4.11]\n",
+      " [-113.2   323.22]]\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(A[-2:, -2:])"
    ]
   },
   {
@@ -394,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -407,10 +565,27 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 67.1   -3.33   4.11 323.22]\n",
+      "-3.33\n",
+      "391.1\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "last_column = A[:, 3]\n",
+    "print(last_column)\n",
+    "print(last_column[1])\n",
+    "\n",
+    "summ = 0\n",
+    "for n in last_column:\n",
+    "    summ += n\n",
+    "print(summ)"
    ]
   },
   {
@@ -424,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -437,10 +612,21 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   4.     -4.      2.43    1.2 ]\n",
+      " [   7.     64.     23.2     2.5 ]\n",
+      " [  -2.43   54.7     3.64 -113.2 ]\n",
+      " [  67.1    -3.33    4.11  323.22]]\n"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(A.transpose())"
    ]
   },
   {
@@ -466,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -479,12 +665,73 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 0 ns\n",
+      "4.0 0.0 51\n",
+      "Error - iteration count exceeded maximum of  2500\n",
+      "Wall time: 5.01 ms\n",
+      "4.534070196722732 2.1316282072803006e-14 2500\n",
+      "Wall time: 0 ns\n",
+      "3.999999999999999\n",
+      "Wall time: 0 ns\n",
+      "4.5340701967227295\n"
+     ]
+    }
+   ],
    "source": [
+    "\"FAILFAILFAIL NEED REVIEW\"\n",
+    "\n",
     "from scipy import optimize\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "def my_f(x):\n",
+    "    \"Evaluate polynomial function\"\n",
+    "    return x**3 - 6*x**2 + 4*x + 12\n",
+    "def testf(x):\n",
+    "    return x**2 - 16\n",
+    "\n",
+    "def compute_root(f, x0, x1, tol, max_it):\n",
+    "    \"Compute roots of a function using bisection\"\n",
+    "    \n",
+    "    error = tol + 1\n",
+    "    it = 0\n",
+    "    \n",
+    "    while error > tol:\n",
+    "        x_mid = (x0 + x1)/2\n",
+    "\n",
+    "        if f(x_mid)*f(x0) < 0:\n",
+    "            x1 = x_mid\n",
+    "        else:\n",
+    "            x0 = x_mid\n",
+    "            \n",
+    "        error = abs(f(x_mid))\n",
+    "        \n",
+    "        # Guard against infinite loop\n",
+    "        it += 1\n",
+    "        if it >= max_it:\n",
+    "            print(\"Error - iteration count exceeded maximum of \", max_it)\n",
+    "            # print(\"Breaking out of while loop\") # Debug message\n",
+    "            break\n",
+    "\n",
+    "    # Return the approximate root, value of f(x) and the number of iterations \n",
+    "    return x_mid, f(x_mid), it\n",
+    "\n",
+    "%time x, f, num_it = compute_root(testf, x0=3, x1=6, tol=1.0e-15, max_it=2500)\n",
+    "print(x, f, num_it)\n",
+    "%time x, f, num_it = compute_root(my_f, x0=3, x1=6, tol=1.0e-15, max_it=2500)\n",
+    "print(x, f, num_it)\n",
+    "\n",
+    "%time x0 = optimize.bisect(testf, 3, 6, xtol=1.0e-80, maxiter=10000, full_output=False, disp=True)\n",
+    "print(x0)\n",
+    "%time x1 = optimize.bisect(my_f, 3, 6, xtol=1.0e-80, maxiter=10000, full_output=False, disp=True)\n",
+    "print(x1)\n",
+    "\n",
+    "\"FAIIIIILLLLLLLLLL\""
    ]
   }
  ],
@@ -504,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
