--- a/0 Jensen's Condensed Notes.ipynb
+++ b/0 Jensen's Condensed Notes.ipynb
@@ -21,7 +21,7 @@
     "*Italic* keywords\n",
     "> Highlights or key ideas with a nice little indent over here\n",
     "\n",
-    "Some Hyperlinks, like this one: [00 Introduction](http://localhost:8889/notebooks/Documents/GitHub/PartIA-Computing-Michaelmas/01%20Variables%2C%20assignment%20and%20operator%20precedence.ipynb)\n",
+    "Some Hyperlinks, like this one: [00 Introduction](00%20Part%20IA%20Michaelmas%20Term%20computing.ipynb)\n",
     " <br><br>\n",
     "\n",
     "- Bullet points\n",
@@ -55,10 +55,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "More $\\LaTeX$ code\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\dot{x} & = \\sigma(y-x) \\\\\n",
+    "\\dot{y} & = \\rho x - y - xz \\\\\n",
+    "\\dot{z} & = -\\beta z + xy\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Course Content\n",
     "\n",
     "\n",
-    "0. [Structure](00%20Part%20IA%20Michaelmas%20Term%20computing.ipynb)\n",
+    "0. [Introduction](00%20Part%20IA%20Michaelmas%20Term%20computing.ipynb)\n",
     "1. [Variables, assignment and operator precedence](01%20Variables,%20assignment%20and%20operator%20precedence.ipynb)\n",
     "1. [Control statements](02%20Control%20statements.ipynb)\n",
     "1. [Types, type conversions and floating point arithmetic](03%20Types,%20type%20conversions%20and%20floating%20point%20arithmetic.ipynb)\n",
@@ -89,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -119,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -341,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +567,10 @@
      "text": [
       "Time error after 100 hours using 16 bit float (s): 87.890625\n",
       "Time error after 100 hours using 32 bit float (s): 0.005364418029785156\n",
-      "Time error after 100 hours using 64 bit float (s): 0.0\n"
+      "Time error after 100 hours using 64 bit float (s): 0.0\n",
+      "\n",
+      "(in 100 sig figs: 0.0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000)\n",
+      "The type of dt is not a normal float; it is: <class 'numpy.float64'>\n"
      ]
     }
    ],
@@ -578,7 +594,9 @@
     "# Test with 64 bit float\n",
     "dt = np.float64(0.1)\n",
     "time = dt*system_counter\n",
-    "print(\"Time error after 100 hours using 64 bit float (s):\", abs(time - num_seconds))"
+    "print(\"Time error after 100 hours using 64 bit float (s):\", abs(time - num_seconds))\n",
+    "print(\"\\n(in 100 sig figs: {:.100f})\".format(time - num_seconds)) # idk why the error is zero though\n",
+    "print(\"The type of dt is not a normal float; it is: {}\".format(type(dt)))"
    ]
   },
   {
@@ -597,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -711,6 +729,7 @@
     "\n",
     "def compute_root(f, x0, x1, tol, max_it, it_count=0): # it_count initialized in the argument part of the def\n",
     "    \"Compute roots of a function using bisection, recusive function\"\n",
+    "    \n",
     "    # increment it_count\n",
     "    it_count += 1\n",
     "    \n",
@@ -726,7 +745,7 @@
     "    if error < tol:\n",
     "        return x_mid, f(x_mid), it_count\n",
     "    \n",
-    "    # Break \n",
+    "    # Break if number of iterations exceed maximum\n",
     "    if it_count >= max_it:\n",
     "        print(\"Maximum Iterations Reached - will show results with \", it_count, \" iterations.\")\n",
     "        return x_mid, f(x_mid), it_count\n",
@@ -746,12 +765,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Library functions"
+    "# 05 Library functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -842,8 +861,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lists"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1025,12 +1051,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Tuples\n",
+    "\n",
+    "Tuples are closely related to lists. The main difference is that a tuple cannot be changed after it has been created. In computing jargon, it is immutable.\n",
+    "\n",
+    "For something that should not change after it has been created, such as a vector of length three with fixed entries, a tuple is more appropriate than a list. It is 'safer' in this case since it cannot be modified accidentally in a program. Being immutable ('read-only') also permits implementations to possibly exploit this to optimise for speed.\n",
+    "\n",
+    "To create a tuple, use round brackets. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Dictionaries and operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1173,7 @@
      "text": [
       "[0. 0. 0. 0. 0. 0.]\n",
       "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-      "[0.84314081 0.0397491  0.61188414]\n",
+      "[0.84197424 0.30412355 0.34436053]\n",
       "[2 3 4 5 6 7 8 9]\n",
       "[2 3 4 5 6 7 8 9]\n",
       "[  0.  20.  40.  60.  80. 100.]\n"
@@ -1157,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1184,14 +1223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10.  0.  0.  0.  0.  5.]\n"
+      "[10.  0.  0.  0.  0.  5.]\n",
+      "6\n"
      ]
     }
    ],
@@ -1199,12 +1239,13 @@
     "\"Indexing - same as python lists\"\n",
     "x[0] = 10\n",
     "x[5] = 5\n",
-    "print(x)"
+    "print(x)\n",
+    "print(len(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1226,12 +1267,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Arithmetic"
+    "### 1D Operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1262,6 +1303,297 @@
     "print(x ** 2, \"\\n\")\n",
     "\n",
     "print(np.sin(y)) # Not math.sin though"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "Wall time: 2.99 ms\n",
+      "1825.7875498316032\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.rand(10000000)\n",
+    "print(type(x))\n",
+    "\n",
+    "%time norm = np.sqrt(np.dot(x, x)) # np.dot - dot product; This calculates the normal/'absolute' magnitude of a vector\n",
+    "print(norm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NumPy 2D Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.2  3.7  9.1]\n",
+      " [-4.   3.1  1.3]] \n",
+      "\n",
+      "2\n",
+      "(2, 3)\n",
+      "-4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[2.2, 3.7, 9.1], [-4.0, 3.1, 1.3]])\n",
+    "\n",
+    "print(A, \"\\n\")\n",
+    "\n",
+    "print(len(A))\n",
+    "print(A.shape)\n",
+    "print(A[1,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1.]\n",
+      " [1. 1.]]\n",
+      "[[0. 0.]\n",
+      " [0. 0.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.ones([2,2]))\n",
+    "print(np.zeros([3,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2\n",
+      "3.7\n",
+      "9.1\n",
+      "------\n",
+      "-4.0\n",
+      "3.1\n",
+      "1.3\n",
+      "------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in A:\n",
+    "    for value in row: # We can do that because the 2D array is essentially an array in an array.\n",
+    "        print(value)\n",
+    "    print(\"------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2D Operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A:\n",
+      " [[3.4 2.6]\n",
+      " [2.1 4.5]]\n",
+      "Matrix B:\n",
+      " [[1.3 0. ]\n",
+      " [0.  2. ]]\n",
+      "Vector x:\n",
+      " [ 0.2 -1.1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[3.4, 2.6], [2.1, 4.5]])\n",
+    "print(\"Matrix A:\\n {}\".format(A))\n",
+    "\n",
+    "B = np.array([[1.3, 0], [0, 2.0]])\n",
+    "print(\"Matrix B:\\n {}\".format(B))\n",
+    "\n",
+    "x = np.array([0.2, -1.1])\n",
+    "print(\"Vector x:\\n {}\".format(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2.18 -4.53]\n",
+      "[[4.42 5.2 ]\n",
+      " [2.73 9.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"Matrix-vector multiplication\"\n",
+    "print(A.dot(x)) # OR print(np.dot(A,x))\n",
+    "\"Matrix-matrix multiplication\"\n",
+    "print(A.dot(B)) # OR print(np.dot(A,B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A:\n",
+      " [[3.4 2.6]\n",
+      " [2.1 4.5]]\n",
+      "Inverse of A:\n",
+      " [[ 0.45731707 -0.26422764]\n",
+      " [-0.21341463  0.34552846]]\n",
+      "Determinant of A:\n",
+      " 9.839999999999998\n",
+      "Transpose of A:\n",
+      " [[3.4 2.1]\n",
+      " [2.6 4.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[3.4, 2.6], [2.1, 4.5]])\n",
+    "print(\"Matrix A:\\n {}\".format(A))\n",
+    "\n",
+    "Ainv = np.linalg.inv(A)\n",
+    "print(\"Inverse of A:\\n {}\".format(Ainv))\n",
+    "\n",
+    "Adet = np.linalg.det(A)\n",
+    "print(\"Determinant of A:\\n {}\".format(Adet))\n",
+    "\n",
+    "Atrans = A.transpose() # OR Atrans = np.transpose(A)\n",
+    "print(\"Transpose of A:\\n {}\".format(Atrans))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "I = np.eye(4)\n",
+    "print(I)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[ 1  2  3  4  5  6  7  8  9 10]\n",
+      "[3 4 5]\n",
+      "[ 4  5  6  7  8  9 10]\n",
+      "[1 2 3 4 5]\n",
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"1D Slicing\"\n",
+    "x = np.arange(1,11)\n",
+    "print(x, \"\\n\")\n",
+    "\n",
+    "print(x[:])\n",
+    "print(x[2:5]) # Includes x[2], excludes x[5]\n",
+    "print(x[3:])\n",
+    "print(x[:5])\n",
+    "print(x[:-1]) # Everything excluding x[-1], which is the last element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2.2  3.7  9.1]\n",
+      " [-4.   3.1  1.3]] \n",
+      "\n",
+      "[[ 2.2  3.7]\n",
+      " [-4.   3.1]] \n",
+      "\n",
+      "[[3.7 9.1]\n",
+      " [3.1 1.3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"2D Slicing\"\n",
+    "A = np.array([[2.2, 3.7, 9.1], [-4.0, 3.1, 1.3]])\n",
+    "print(A, \"\\n\")\n",
+    "\n",
+    "print(A[:, :2], \"\\n\")\n",
+    "print(A[:, 1:])"
    ]
   }
  ],
