--- a/07 Numerical computation.ipynb
+++ b/07 Numerical computation.ipynb
@@ -1128,7 +1128,8 @@
     "> second last entry, etc. This is convenient if we know how far in from the end of an array a desired entry is.\n",
     "> By using negative indices we can express this without reference to the length of the array.\n",
     "\n",
-    "> *I THINK THIS IS WRONG `-1` should be second to last - from third to last is just '`[2:]`'*"
+    "> I THINK THIS IS WRONG `-1` should be second to last - from third to last is just '`[2:]`' <br>\n",
+    "> *EDIT: $\\textbf{I WAS SO WRONG}$ `[:-1]` means from range 0 to -2; the range excludes the `x[-1]`!!!*"
    ]
   },
   {
